# cann-bench-upstream

./: .gitignore  README.md  pyproject.toml  requirements-triton.txt  requirements.txt  retry_design.md
.github/workflows/: sync-gitcode-upstream.yml
bench_lab/cv_agent_matmul_bench/: README.md
bench_lab/stanford_bench/: README.md  download.sh
docker/: Dockerfile  README.md  run.sh  test_env.py
docs/: README.md  changelog.md  kernel_bench_design_v1.0.md
docs/design/: baseline_collection_design.md  evaluator_design.md  kernel_eval_architecture.md  micro_benchmark_selection.md  module_panorama.md  multi_card_parallel_analysis.md  perf_collection_design.md  precision_comparison_design.md  report_design.md  triton_ascend_integration_implementation.html  triton_ascend_integration_implementation.md
docs/guide/: auto_pipeline_agent_integration.md  auto_pipeline_usage.md  contributing.md  custom_benchmark_integration.md  quick_start.md  self_hosted_runner_cann9.md  submission_rules.md  triton_ascend_quick_start.md  version_policy.md
evaluation/: README.md  __init__.py  evaluate.py
evaluation/submission_examples/direct_launch_example/csrc/: CMakeLists.txt
evaluation/submission_examples/direct_launch_example/csrc/ops/add/op_plugin/: add_plugin.cpp
examples/direct_launch_example/csrc/ops/: CMakeLists.txt
examples/direct_launch_example/csrc/ops/add/: CMakeLists.txt
examples/direct_launch_example/csrc/ops/add/op_kernel/: add_kernel.cpp  add_launch.h
examples/direct_launch_example/csrc/ops/add/op_plugin/: add_plugin.cpp
examples/direct_launch_example/csrc/ops/sqrt/: CMakeLists.txt
examples/direct_launch_example/csrc/ops/sqrt/op_kernel/: sqrt_kernel.cpp  sqrt_launch.h
examples/direct_launch_example/csrc/ops/sqrt/op_plugin/: sqrt_plugin.cpp
scripts/: README.md  collect_baseline.py  download_benchmarks.sh  migrate_baseline_to_data.py  run_evaluation.sh  run_report.sh  run_test.sh  run_ut.sh
tasks/: description.html
tests/: __init__.py  fusion_result.json  run_simple.py
tests/st/: conftest.py  (+5 more)
(+1402 files in other folders)
