[project]
name = "cann-bench"
dynamic = ["version"]
description = "CANN domain benchmark framework for evaluating AI-generated Ascend C operator code"
license = {text = "CANN Open Software License v2.0"}
requires-python = ">=3.8"

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
]
npu = [
    "torch>=2.4.0",
    "torchvision>=0.18.0",
    "torch_npu>=2.4.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120